tests/ui/recursion/recursive-static-definition.stderr
error[E0391]: cycle detected when const-evaluating + checking `FOO`
  --> $DIR/recursive-static-definition.rs:1:1
   |
LL | pub static FOO: u32 = FOO;
   | ^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `FOO`...
  --> $DIR/recursive-static-definition.rs:1:23
   |
LL | pub static FOO: u32 = FOO;
   |                       ^^^
   = note: ...which again requires const-evaluating + checking `FOO`, completing the cycle
note: cycle used when linting top-level module
  --> $DIR/recursive-static-definition.rs:1:1
   |
LL | / pub static FOO: u32 = FOO;
LL | |
LL | |
LL | | fn main() {}
   | |____________^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
